--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
-JWT_SECRET=super_secret_key
+JWT_SECRET=super_secret_key_2026
+MONGO_URI=mongodb+srv://chatuser:algo_seguro123@proyecto.14l4yqc.mongodb.net/chatdb?retryWrites=true&w=majority
